feat: Implementing User Routes
