# src/routes/index.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+import { userRoutes } from "./UserRoutes";
+
+const router = Router();
+
+// User Routes
+router.use("/user", userRoutes);
+
+export { router };
